// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellAmountSummary renders correctly 1`] = `
<View>
  <AmountSummary
    amount={250000}
  />
  <PremiumText
    premium={1.5}
    style={
      {
        "color": "#7D675E",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 20,
        "letterSpacing": 0.2,
        "lineHeight": 28,
      }
    }
  />
</View>
`;

exports[`SellAmountSummary renders correctly for sell offers drafts 1`] = `
<View>
  <AmountSummary
    amount={1000000}
  />
  <PremiumText
    premium={1.5}
    style={
      {
        "color": "#7D675E",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 20,
        "letterSpacing": 0.2,
        "lineHeight": 28,
      }
    }
  />
</View>
`;
